--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
+    , "stylus": ">= 0.0.1"
+    , "mongoose": ">= 0.0.1"
     , "jade": ">= 0.0.1"
   }
 }
