--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "express": "2.5.8"
     , "stylus": ">= 0.0.1"
     , "bootstrap-stylus": ">= 0.0.1"
+    , "socket.io": ">= 0.0.1"
     , "connect-assets": ">= 0.0.1"
     , "mongoose": ">= 0.0.1"
     , "jade": ">= 0.0.1"
